# pinguescoFS

./: .gitignore  FS  INSTALL.md  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in
formatter/: Makefile.am  Makefile.in  formater  formater.c
report/: .gitignore  Makefile  acm_proc_article-sp.cls  report.bib  report.tex
src/: Makefile.am  Makefile.in  allocator.c  allocator.h  debug.h  dentry.c  dentry.h  dir.c  dir.h  disk.c  disk.h  file.c  file.h  globals.c  globals.h  ind_block.c  ind_block.h  inode.c  inode.h  open_files.c  open_files.h  pinguescofs.c  stat.c  stat.h  superblock.c  superblock.h
tools/: mkdev.sh
